--- a/about/index.html
+++ b/about/index.html
@@ -106,7 +106,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"fd2456811d"};
 </ul></div></nav></div></div>		</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
 			<div class="ast-builder-button-wrap ast-builder-button-size-">
-<a class="ast-custom-button-link" target="_self"><div class="ast-custom-button">Call: 814-826-4346</div></a><a class="menu-link" target="_self">Call: 814-826-4346</a>
+<a class="ast-custom-button-link" href="tel:8148264346" target="_self"><div class="ast-custom-button">Call: 814-826-4346</div></a><a class="menu-link" href="tel:8148264346" target="_self">Call: 814-826-4346</a>
 </div>		</div>
 									</div>
 												</div>
@@ -394,7 +394,7 @@ Sunday : 11.00 &#8211; 09.00</p>
 </ul></div></nav></div></div>		</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
 			<div class="ast-builder-button-wrap ast-builder-button-size-">
-<a class="ast-custom-button-link" target="_self"><div class="ast-custom-button">Call: 814-826-4346</div></a><a class="menu-link" target="_self">Call: 814-826-4346</a>
+<a class="ast-custom-button-link" href="tel:8148264346" target="_self"><div class="ast-custom-button">Call: 814-826-4346</div></a><a class="menu-link" href="tel:8148264346" target="_self">Call: 814-826-4346</a>
 </div>		</div>
 							</div>
 					<div class="ast-desktop-popup-content">
