--- a/services/index.html
+++ b/services/index.html
@@ -43,7 +43,7 @@ flexibility(document.documentElement);
 <script src="/wp-includes/js/jquery/jquery.min.js?ver=3.5.1" id="jquery-core-js"></script>
 <script src="/wp-includes/js/jquery/jquery-migrate.min.js?ver=3.3.2" id="jquery-migrate-js"></script>
 <script id="ds-cli-js-extra">
-var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"fd2456811d"};
+var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"9902407092"};
 </script>
 <script src="/ds-plugins/ds-cli/js/ds-cli.js?ver=5.7.2" id="ds-cli-js"></script>
 <link rel="https://api.w.org/" href="/wp-json/">
@@ -102,6 +102,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"fd2456811d"};
 <li id="menu-item-117" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-117"><a href="/" class="menu-link">Home</a></li>
 <li id="menu-item-913" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a href="/about/" class="menu-link">About</a></li>
 <li id="menu-item-912" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-902 current_page_item menu-item-912"><a href="/services/" aria-current="page" class="menu-link">Services</a></li>
+<li id="menu-item-1082" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1082"><a href="/rates/" class="menu-link">Rates</a></li>
 <li id="menu-item-911" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-911"><a href="/contact/" class="menu-link">Contact</a></li>
 </ul></div></nav></div></div>		</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
@@ -370,26 +371,18 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"fd2456811d"};
 		</section></div>		</aside>
 					<div class="ast-builder-layout-element ast-flex site-footer-focus-item" data-section="section-fb-social-icons-1">
 				<div class="ast-footer-social-1-wrap ast-footer-social-wrap"><div class="footer-social-inner-wrap element-social-inner-wrap social-show-label-false ast-social-color-type-custom ast-social-stack-none ast-social-element-style-filled">
-<a aria-label="Facebook" target="_blank" rel="noopener noreferrer" style="--color: #557dbc; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-facebook footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg></span></a><a aria-label="Twitter" target="_blank" rel="noopener noreferrer" style="--color: #7acdee; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-twitter footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg></span></a><a href="mailto:/" aria-label="Email" style="--color: #ea4335; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-email footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24"> <title id="email"> Email </title> <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"></path></svg></span></a>
+<a href="http://www.facebook.com/zacstechhelp" aria-label="Facebook" target="_blank" rel="noopener noreferrer" style="--color: #557dbc; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-facebook footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg></span></a><a href="mailto:zac@zacstechhelp.com" aria-label="Email" style="--color: #ea4335; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-email footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24"> <title id="email"> Email </title> <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"></path></svg></span></a>
 </div></div>			</div>
 						</div>
 											<div class="site-footer-primary-section-2 site-footer-section site-footer-section-2">
 							<aside class="footer-widget-area widget-area site-footer-focus-item" data-section="sidebar-widgets-footer-widget-2" aria-label="Footer Widget 2">
-			<div class="footer-widget-area-inner site-info-inner"><section id="nav_menu-1" class="widget widget_nav_menu"><h2 class="widget-title">Services</h2>
-<nav class="menu-services-container" aria-label="Services"><ul id="menu-services" class="menu">
-<li id="menu-item-892" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-892"><a href="#" class="menu-link">Casual Make Up</a></li>
-<li id="menu-item-893" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-893"><a href="#" class="menu-link">Hair Styling</a></li>
-<li id="menu-item-894" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-894"><a href="#" class="menu-link">Skin Treatment</a></li>
-<li id="menu-item-895" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-895"><a href="#" class="menu-link">Fashion Make Up</a></li>
-<li id="menu-item-896" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-896"><a href="#" class="menu-link">Bridal Make Up</a></li>
-<li id="menu-item-897" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-897"><a href="#" class="menu-link">Professional Photoshoots</a></li>
-</ul></nav></section></div>		</aside>
+			<div class="footer-widget-area-inner site-info-inner"><section id="nav_menu-1" class="widget widget_nav_menu"><h2 class="widget-title">Services</h2></section></div>		</aside>
 						</div>
 											<div class="site-footer-primary-section-3 site-footer-section site-footer-section-3">
 							<aside class="footer-widget-area widget-area site-footer-focus-item" data-section="sidebar-widgets-footer-widget-3" aria-label="Footer Widget 3">
 			<div class="footer-widget-area-inner site-info-inner">
 <section id="text-7" class="widget widget_text"><h2 class="widget-title">Email</h2>			<div class="textwidget">
-<p>info@example.com</p>
+<p><a href="mailto:zac@zacstechhelp.com">zac@zacstechhelp.com</a></p>
 </div>
 		</section><section id="text-8" class="widget widget_text"><h2 class="widget-title">Service Locations</h2>			<div class="textwidget">
 <p>Centre County, PA and surrounding counties.</p>
@@ -399,14 +392,14 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"fd2456811d"};
 						</div>
 											<div class="site-footer-primary-section-4 site-footer-section site-footer-section-4">
 							<aside class="footer-widget-area widget-area site-footer-focus-item" data-section="sidebar-widgets-footer-widget-4" aria-label="Footer Widget 4">
-			<div class="footer-widget-area-inner site-info-inner"><section id="text-9" class="widget widget_text"><h2 class="widget-title">Business Hours</h2>			<div class="textwidget">
-<p>Monday &#8211; Closed<br>
+			<div class="footer-widget-area-inner site-info-inner"><section id="text-9" class="widget widget_text"><h2 class="widget-title">General Availability</h2>			<div class="textwidget">
+<p>Monday &#8211; 11.00 &#8211; 09.00<br>
 Tuesday : 11.00 &#8211; 09.00<br>
 Wednesday : 11.00 &#8211; 09.00<br>
 Thursday : 11.00 &#8211; 09.00<br>
 Friday : 11.00 &#8211; 09.00<br>
-Saturday : 11.00 &#8211; 09.00<br>
-Sunday : 11.00 &#8211; 09.00</p>
+Saturday : Limited<br>
+Sunday : Closed</p>
 </div>
 		</section></div>		</aside>
 						</div>
@@ -446,6 +439,7 @@ Sunday : 11.00 &#8211; 09.00</p>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-117"><a href="/" class="menu-link">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a href="/about/" class="menu-link">About</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-902 current_page_item menu-item-912"><a href="/services/" aria-current="page" class="menu-link">Services</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1082"><a href="/rates/" class="menu-link">Rates</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-911"><a href="/contact/" class="menu-link">Contact</a></li>
 </ul></div></nav></div></div>		</div>
 				<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
