tried adding netlify attribute to form

--- a/contact/index.html
+++ b/contact/index.html
@@ -240,7 +240,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"9902407092"};
 <div class="wpforms-submit-container">
 <input type="hidden" name="wpforms[id]" value="14"><input type="hidden" name="wpforms[author]" value="1"><input type="hidden" name="wpforms[post_id]" value="904"><button type="submit" name="wpforms[submit]" class="wpforms-submit " id="wpforms-submit-14" value="wpforms-submit" aria-live="assertive" data-alt-text="Sending..." data-submit-text="Send Message">Send Message</button>
 </div>
-</form></div>  <!-- .wpforms-container -->
+</form data-netlify="true"></div>  <!-- .wpforms-container -->
 </div>
 </div>
 </div></div>
