tried adding netlify attribute to form v4

--- a/contact/index.html
+++ b/contact/index.html
@@ -185,7 +185,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"6935e9058a"};
 
 
 
-<p>Sagittis, faucibus nibh sed rhoncus lacus, amet, quis eget tristique purus faucibus orci commodo fames aliquet venenatis sed aliquet purus felis congue consectetur adipiscing eli vulputate.</p>
+<p>Have any questions or concerns? Don&#8217;t be hesitant to reach out!</p>
 
 
 
@@ -193,27 +193,31 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"6935e9058a"};
 
 
 
-<h5><strong>Address:</strong></h5>
+<h5><strong>Service Locations:</strong></h5>
 
 
 
-<p>425 6th Ave, New York, NY 10046, United States</p>
+<p>Centre County, PA for in person and remote services available across the globe.</p>
 
 
 
-<h5><strong>Call Us:</strong></h5>
+<h5><strong>Call Or Text:</strong></h5>
 
 
 
-<p>+1 234 567 890</p>
+<p><a href="tel:814-826-4346">814-826-4346</a></p>
 
 
 
-<h5><strong>Write Us:</strong></h5>
+<h5><strong>Email:</strong></h5>
 
 
 
-<p>mail@example.com</p>
+<p><a href="mailto:zac@zacstechhelp.com" target="_blank" rel="noreferrer noopener">zac@zacstechhelp.com</a></p>
+
+
+
+<p></p>
 </div>
 
 
@@ -223,7 +227,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"6935e9058a"};
 <div class="screen-reader-response">
 <p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul>
 </div>
-<form action="/contact/#wpcf7-f1099-p904-o1" data-netlify="true" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+<form data-netlify="true" action="/contact/#wpcf7-f1099-p904-o1" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="1099">
 <input type="hidden" name="_wpcf7_version" value="5.4.1">
