tried adding netlify attribute to form v5!

--- a/contact/index.html
+++ b/contact/index.html
@@ -227,7 +227,7 @@ var ds_cli = {"ajaxurl":"\/wp-admin\/admin-ajax.php","nonce":"6935e9058a"};
 <div class="screen-reader-response">
 <p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul>
 </div>
-<form data-netlify="true" action="/contact/#wpcf7-f1099-p904-o1" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+<form action="/contact/#wpcf7-f1099-p904-o1" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="1099">
 <input type="hidden" name="_wpcf7_version" value="5.4.1">
